For a more comprehensive changelog for the latest experimental CVS code, see:
        http://scummvm.sourceforge.net/daily/ChangeLog

0.??
 New Games:
   - Added SAGA engine (for the games and "I Have No Mouth and I Must Scream"
     and "Inherit the Earth").
   - Added Gob engine (for Goblins series)

 General:
   - Reworked cursor handling in SDL backend. Now cursors can have their own
     palette and scaling. This is used by Humongous Entertainment games now.
   - Added FluidSynth MIDI driver.
   - Added GUI for the "soundfont" setting. (Currently only used by the
     CoreAudio and FluidSynth MIDI drivers.)
   - The MPEG player could hang if the sound ended prematurely.

 SCUMM:
   - Added support for Mac Humongous Entertainment titles
   - Added support for multiple filenames/versions using a single target
   - Implemented CGA and Hercules render modes in early LEC titles
   - Added dialogs which are shown when you modify the talkspeed or music
     volume using hotkeys.
   - Added support for NES version of Maniac Mansion
   - Added thumbnail support for savegames.
   - Broke compatibility with HE savegame (HE v71 and upwards only)

 Sword2:
   - Made the resource manager expire resources more intelligently.
   - Improved performance when playing the game from CD instead of hard disk.
   - Simplified sound effects handling. Again.
   - Code cleanups and restructuring.

 <PORT #1 NEWS>
   - ...

0.7.1 (2005-03-27)
 General:
   - Added a MT-32 emulator. (It was actually added in 0.7.0 but we forgot to
     put it into the NEWS file :-).
   - Less memory-hungry MPEG movie playback for the Broken Sword games.

 SCUMM:
   - Fixed wrong actor animation in Full Throttle INSANE
 
 Windows Mobile port (PocketPC / Smartphone) :
   - Fixed FOTAQ crash on all platforms when leaving the hotel AGAIN
   - Better low quality Adlib emulation for FOTAQ
   - Fix randomly broken Hide Toolbar option (thanks iKi)
   - Fix first hardware key mapping (was not displayed before) 