@@ -42,6 +42,19 @@ void HQ3x(const uint8 *srcPtr, uint32 srcPitch, uint8 *dstPtr, uint32 dstPitch, 
 #else
 
 #ifdef HAS_ALTIVEC
+
+#ifdef __amigaos4__
+#include <proto/exec.h>
+static bool isAltiVecAvailable() {
+	uint32 vecUnit;
+	IExec->GetCPUInfo(GCIT_VectorUnit, &vecUnit, TAG_DONE);
+	if (vecUnit == VECTORTYPE_NONE)
+		return false;
+	else
+		return true;
+}
+#else
+
 #include <sys/sysctl.h> 
 
 static bool isAltiVecAvailable()  {
@@ -53,6 +66,7 @@ static bool isAltiVecAvailable()  {
 		return hasVectorUnit != 0; 
 	return false; 
 }
+#endif
 #endif
 
 #define PIXEL00_1M  *(q) = interpolate16_2<bitFormat,3,1>(w5, w1);
