@@ -11,7 +11,7 @@
     Jonathan Gray & Engine: SCUMM, HE, Broken Sword II\\
     Travis Howell & Engine: SCUMM, HE, Simon the Sorcerer\\
     Oliver Kiehl & Engine: Beneath a Steel Sky, Simon\\
-    Pawel Kolodziejski & Engine: SCUMM (Codecs, iMUSE, Smush, etc.)\\
+    Pawe{\l} Ko{\l}odziejski & Engine: SCUMM (Codecs, iMUSE, Smush, etc.)\\
     Andrew Kurushin & Engine: SAGA\\
     Gregory Montoir & Engine: Flight of the Amazon Queen, HE\\
     Joost Peters & Engine: Beneath a Steel Sky, Flight of the Amazon Queen\\
@@ -23,6 +23,7 @@
     Jamieson Christian & iMUSE, MIDI, all things musical\\
     Jerome Fisher & MT-32 emulator\\
     Jochen Hoenicke & Speaker \& PCjr sound support, Adlib work\\
+    Hans-J\"org Frieden & Port: AmigaOS 4\\
   \end{tabular}
 \item \textbf{Retired Team Members}\\
   \begin{tabular}[h]{p{4cm}l}
@@ -55,6 +56,7 @@
     Johannes Schickel & Thumbnails for ScummEngine\\
     Andr\'e Souza & SDL-based OpenGL renderer\\
     Tim ??? & Initial MI1 CD music support\\
+    Juha Niemim\"aki & AmigaOS 4 port maintaining\\
   \end{tabular}
 
 And to all the contributors, users, and beta testers we've missed. Thanks!
