@@ -42,6 +42,8 @@ static const char *credits[] = {
 "\\L\\c2""    MT-32 emulator",
 "\\L\\c0""  Jochen Hoenicke",
 "\\L\\c2""    Speaker & PCjr sound support, Adlib work",
+"\\L\\c0""  Hans-Jorg Frieden",
+"\\L\\c2""    Port: AmigaOS 4",
 "\\L\\c0""",
 "\\C\\c1""Retired Team Members:",
 "\\L\\c0""  Ralph Brorsen",
@@ -101,6 +103,8 @@ static const char *credits[] = {
 "\\L\\c2""    SDL-based OpenGL renderer",
 "\\L\\c0""  Tim ???",
 "\\L\\c2""    Initial MI1 CD music support",
+"\\L\\c0""  Juha Niemimaki",
+"\\L\\c2""    AmigaOS 4 port maintaining",
 "\\L\\c0""",
 "\\L\\c0""And to all the contributors, users, and beta",
 "\\L\\c0""testers we've missed. Thanks!",
