@@ -19,7 +19,11 @@
  * IN THE SOFTWARE.
  */
 
+#ifdef __amigaos4__
+#include <strings.h>
+#else
 #include <memory.h>
+#endif
 
 #include "mt32emu.h"
 
