@@ -7,6 +7,10 @@ For a more comprehensive changelog for the latest experimental CVS code, see:
      and "Inherit the Earth").
    - Added Gob engine (for Goblins series)
 
+ New Ports:
+   - Added PlayStation 2 port
+   - Added AmigaOS 4 port
+
  General:
    - Reworked cursor handling in SDL backend. Now cursors can have their own
      palette and scaling. This is used by Humongous Entertainment games now.
